crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__include__include_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/include.rs
assertion_line: 22
expression: "complete(r#\"\n%! bar.sp\nint bar;\n%! include/baz.inc\nint baz;\n%! foo.sp\n#include <>\n          |\n          ^\"#,\nSome('<'.to_string()))"
---
[]
