crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__include__include_5.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/include.rs
assertion_line: 70
expression: "complete(r#\"\n%! bar.sp\nint bar;\n%! include/baz.inc\n#include \"\"\n          |\n          ^\n%! include/foo.inc\nint foo;\"#,\nSome('\"'.to_string()))"
---
[
  {
    "label": "foo.inc",
    "kind": 17,
    "detail": "foo.inc",
    "deprecated": false,
    "insertText": "foo",
    "insertTextFormat": 1
  }
]
